--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007/09/16
+	Completed the implementation of the Reeds&Shepp Curve
+		  - MaxAbsoluteDerivative 
+		  - Reduce the option RS_ALL type of curve
+
 2007/05/02
 	Added methods and attributes to keep track of extration and reversion of KineoWorks direct paths.
 	
