--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007/10/09
+	1. Correct a bug in  findRsCurveNumInVector() : 
+	   - put an Epsilon for the test else there is a bug when u ~= val 
+	
 2007/09/29
 	1. Added visibility algorithm.
 	2. Added a roadmap builder delegate to display the roadmap.
