--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2007/11/14
+	Remove unused classes kwsPlusRoadmap and kwsPlusDrawRdmBuilderDelegate
 2007/10/22
 	4. Added a class to test whether a configuration constraint is continuous and is a projection.	
 2007/10/17
