Correction in installation instructions.

--- a/INSTALL
+++ b/INSTALL
@@ -6,7 +6,7 @@ untar the package
 cd kwsPlus
 mkdir build
 cd build
-../configure --with-kineo=$PATH_TO_KWS  --with-lapack(=$PATH_TO_LAPACK)
+../configure (--with-boost(=$PATH_TO_BOOST))  --with-lapack(=$PATH_TO_LAPACK)
 
 Compilation
 -----------
