--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008/04/07
+
+	31. Adaptation to KPP version 2.04.500.
+	30. Correction of numerous warnings in documentation generation.
+
 2008/04/04      kwsPlus release 1.3
 
         29. Added steering method factories.
