--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008/04/17
+	33. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall".
+	32. Removed unitTesting program to test projection constraint.
+	
+2008/04/07
+
+	31. Adaptation to KPP version 2.04.500.
+	30. Correction of numerous warnings in documentation generation.
+
 2008/04/04      kwsPlus release 1.3
 
         29. Added steering method factories.
