--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+
+2008/04/21
+	34. correct a bug in kitMat3.h : disable multiple inclusion
+
 2008/04/17
 	33. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall".
 	32. Removed unitTesting program to test projection constraint.
