--- a/ChangeLog
+++ b/ChangeLog
@@ -1,15 +1,13 @@
 
-2008/04/21
-	34. correct a bug in kitMat3.h : disable multiple inclusion
+        31. Adaptation to KPP version 2.04.500.
 
-2008/04/17
-	33. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall".
-	32. Removed unitTesting program to test projection constraint.
-	
-2008/04/07
+2008/04/24      kwsPlus release 1.3.1
 
-	31. Adaptation to KPP version 2.04.500.
-	30. Correction of numerous warnings in documentation generation.
+        34. correct a bug in kitMat3.h : disable multiple inclusion
+        33. If CXXFLAGS and CFLAGS are not defined at configuration, they
+            are set to "-Wall".
+        32. Removed unitTesting program to test projection constraint.
+        30. Correction of numerous warnings in documentation generation.
 
 2008/04/04      kwsPlus release 1.3
 
