--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-
+        32. Fix memory leak in flicDistance.
         31. Adaptation to KPP version 2.04.500.
 
 2008/04/24      kwsPlus release 1.3.1
