--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 
 2008/04/24      kwsPlus release 1.3.1
 
+        35. Fix memory leak in flicDistance.
         34. correct a bug in kitMat3.h : disable multiple inclusion
         33. If CXXFLAGS and CFLAGS are not defined at configuration, they
             are set to "-Wall".
