--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 
+2008/04/24      kwsPlus release 1.3.2
+
+        36. Fix more memory leaks in flicDistance.
+
 2008/04/24      kwsPlus release 1.3.1
 
         35. Fix memory leak in flicDistance.
