--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
-        34. Fix memory leak in flicDistance.
-	33. Added some debugging code in flicDistance.cpp and flicDistance.h.
-	32. Corrected some warning and removed useless KWSPRECOND() in flicDirectPath.cpp.
+
+        38. Added some debugging code in flicDistance.cpp and flicDistance.h.
+        37. Corrected some warning and removed useless KWSPRECOND() in
+            flicDirectPath.cpp.
         31. Adaptation to KPP version 2.04.500.
+
+2008/04/24      kwsPlus release 1.3.2
+
+        36. Fix more memory leaks in flicDistance.
 
 2008/04/24      kwsPlus release 1.3.1
 
