--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
-2008/04/25
+2008/05/13	kwsPlus release 1.4
+	
 	34. Added distance function factory.
         33. Added some debugging code in flicDistance.cpp and flicDistance.h.
         32. Corrected some warning and removed useless KWSPRECOND() in
