UnitTesting is now compiled on demand configure --enable-untTesting.
Test of direct path max absoclute derivatives has been externalized to
package testKwsDirectPath. Thus this test can be performed out of
kwsPlus.

To compile unitTesting, just configure with --enable-unitTesting.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008/06/09
+	37. UnitTesting is now compiled on demand configure --enable-untTesting.
+	
 2008/05/20
 
 	36. Added diffusion shooter factory.
