--- a/ChangeLog
+++ b/ChangeLog
@@ -1,38 +1,22 @@
+2008/09/08	kwsPlus release 1.5
+
+	53. Define macro FLIC_HUGE_VAL.
+	52. Using the addNode() of roadmap builder instead of roadmap itself.
 	51. CflicDistance::distance() now returns 1e6 instead of HUGE_VAL when 
 	    direct path does not exist.
-	
-2008/07/09
 	50. Change dependency in unitTesting (testKwsDirectPath -> testKineoWorks).
-2008/07/03
 	49. Fix Typo in documentation.
-2008/07/08
 	48. Remove useless method CflicDirectPath::init.
-2008/07/03
 	47. Modification in class CkwsPlusDPLinear.
-2008/07/01
 	46. Make access functions to velocity const
-	
-2008/06/27
-
 	45. Correction of a bug in copy of CkwsPlusDirectPath.
 	44. Added computation of velocity along CflicDirectPath direct path.
-	
-2008/06/24
-
 	43. In hppVisRdmBuilder::buildOneStep, if shooter fails, return KD_ERROR.
-	
-2008/06/23
-		
 	42. Fixed a bug in copy constructor of CflicDirectPath.
-	
-2008/06/18
-
 	41. Fix some bugs in Local Trees.
 	40. Added node and edge classes with additionnal informations.
 	39. Added template builder and shooter that sends additionnal
 	    notifications.
-	
-2008/06/16
 	38. Implemented a roadmap builder delegate to interrupt a
 	    roadmap builder during path planning.
 	
