Distribute headers in subdirectories.
  Headers are distributed into the following directories:
    include/kwsPlus/util,
    include/kwsPlus/directPath
    include/kwsPlus/roadmap.
  They are installed accordingly in ${includedir}/kwsPlus.

  Copies of the header files are still installed in the former
  directory, but a warning message suggests users to install new
  versions of the headers.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+
+	57. Distribute headers in subdirectories.
+	56. Install doxytag file in ${datadir}/doc/kwsPlus/html directory.
+	
 2009/02/03	kwsPlus release 1.6
 	
 	55. Generate unitTesting/Makefile.in even without --enable-unitTesting
