--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-04-30  Florent Lamiraux  <florent@laas.fr>
 
+	Add missing file in commit cde2059b3cb.
+	* build-aux/boost.m4: New.
+	* build-aux/init.mk: New.
+
+2009-04-30  Florent Lamiraux  <florent@laas.fr>
+
 	Homogeneize style in headers and complete doc.
 	* include/kwsPlus/kwsPlusDPLinear.h: Remove obsolete headers
 	* include/kwsPlus/kwsPlusSMLinear.h: Remove obsolete headers
