--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2009/07/27	kwsPlus release 1.8
+
 2009-05-01  Florent Lamiraux  <florent@laas.fr>
 
 	Add default argument in kwsPlusSMLinear::create().
@@ -17,26 +19,26 @@
 	* include/kwsPlus/kwsPlusSMLinear.h: Remove obsolete headers
 
 2009/04/30 Florent Lamiraux <florent@laas.fr>
-	
+
 	Better handle dependency to boost at configuration
 	  * implement boost.m4 macro to check that boost is actually installed.
-	
+
 2009/04/17	kwsPlus release 1.7
-	
+
 	58. Create nodes with node factory in ChppVisRdmBuilder.
 	57. Distribute headers in subdirectories.
 	56. Install doxytag file in ${datadir}/doc/kwsPlus/html directory.
-	
+
 2009/02/03	kwsPlus release 1.6
-	
+
 	55. Generate unitTesting/Makefile.in even without --enable-unitTesting
 	54. Removed using namespace commands in headers.
-	
+
 2008/09/08	kwsPlus release 1.5
 
 	53. Define macro FLIC_HUGE_VAL.
 	52. Using the addNode() of roadmap builder instead of roadmap itself.
-	51. CflicDistance::distance() now returns 1e6 instead of HUGE_VAL when 
+	51. CflicDistance::distance() now returns 1e6 instead of HUGE_VAL when
 	    direct path does not exist.
 	50. Change dependency in unitTesting (testKwsDirectPath -> testKineoWorks).
 	49. Fix Typo in documentation.
@@ -53,15 +55,15 @@
 	    notifications.
 	38. Implemented a roadmap builder delegate to interrupt a
 	    roadmap builder during path planning.
-	
+
 2008/06/12	kwsPlus release 1.4.1
-	
+
 	37. UnitTesting is now compiled on demand configure --enable-unitTesting.
 	36. Added diffusion shooter factory.
 	35. Added diffusion node picker factory.
-	
+
 2008/05/13	kwsPlus release 1.4
-	
+
 	34. Added distance function factory.
         33. Added some debugging code in flicDistance.cpp and flicDistance.h.
         32. Corrected some warning and removed useless KWSPRECOND() in
@@ -94,7 +96,7 @@
             nodes and a set of edges from a roadmap.
 
 2008/02/18      kwsPlus release 1.2
-	
+
         24. In flicDirectPath, curvature bound is enforced at the creation
             of the direct path.
         23. Added CkwsPlusLTRdmBuilder class. Derives from any diffusing
