--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-12-16  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Generate config.h header.
+	* configure.ac: Generate ``config.h'' to make compilation
+	lines less verbose.
+
 2009/07/27	kwsPlus release 1.8
 
 2009-05-01  Florent Lamiraux  <florent@laas.fr>
