--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+2013/09/26 Release 2.3.1
+
+  Main changes since 2.3
+
+  1. Fix doxygen header input tags.
+
 2013/09/25 Release 2.3
 
   Main changes since 2.2
