--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+2013/10/08 Release 2.4.0
+
+  Main changes since 2.3.1
+
+  1. Add dependency to hpp-util.
+  2. Fix various warnings.
+
 2013/09/26 Release 2.3.1
 
   Main changes since 2.3
