--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+2013/10/08 Release 2.4.1
+
+  Main changes since 2.4.0
+
+  1. Fix warnings.
+  2. Include missing headers.
+
 2013/10/08 Release 2.4.0
 
   Main changes since 2.3.1
